# Tempo

./: .gitlab-ci.yml  CMakeLists.txt  README.md  git_sha.cpp.in  install_torch.sh  runtest.py
Tests/: CMakeLists.txt  main.cpp  testing.cpp  testing.hpp
Tests/data/: Identity_export.pt  extended_test_problem.json  graph_builder_config.json  test_problem.json
Tests/heuristics/: RelaxationPolicy.cpp  ValueHeuristics.cpp  VariableHeuristics.cpp
Tests/nn/: GNN.cpp  GraphBuilder.cpp  MinimalTopologyBuilder.cpp  TopologyBuilderTest.cpp  TopologyBuilderTest.hpp  feature_extractors.cpp  heat_map_utils.cpp  tensor_utils.cpp
Tests/util/: LiteralStorage.cpp  Lookup.cpp  Matrix.cpp  Model.cpp  SchedulingView.cpp  SolutionPool.cpp  SubscribableEvent.cpp  TraceWatcher.cpp  distance.cpp  intfinity.cpp  random.cpp  scheduling_problem_utils.cpp  serialization.cpp  task_timings.cpp
cmake_modules/: GetGitRevisionDescription.cmake  GetGitRevisionDescription.cmake.in
data/sample/: cr_16_1.txt  la16_0_1  tsptw  tsptw_145.txt  tsptw_2.txt
presentation/: ThetaTree.tex  beamerthemelaas.sty  sched_macros.tex  theta_macros.tex
presentation/ex/: jsp_cactus_swv16_zoom.tex  jstl_cactus_la25_0_0,5_zoom.tex  osp_cactus_j8-per0-1_zoom.tex  precedence_graph.tex  precedence_graph_lb.tex  precedence_graph_ub.tex  theta_sched.tex  theta_sched_hole.tex  theta_tree.tex
presentation/sections/: clause_learning.tex  difference_logic.tex  edge_branching.tex  edge_finding.tex  experiments.tex  future_work.tex  introduction.tex  precedence_reasoning.tex
presentation/src/: tempo.tex
reference/: bibd.out  fjssp.out  jsp.out  jstl.out  osp.out  path.out  rcpsp.out  sat.out  tsptw.out  tsptwopt.out
src/cpp/: Clause.cpp  Constant.cpp  Constraint.cpp  Explanation.cpp  Global.cpp  Options.cpp  Restart.cpp  ReversibleObject.cpp  Solution.cpp  data_generation.cpp
src/cpp/constraints/: Constraint.cpp
src/cpp/heuristics/: ImpactMap.cpp  LearningRateHeap.cpp  RandomBinaryValue.cpp  RandomVariableSelection.cpp  SolutionGuided.cpp  Tightest.cpp  TightestValue.cpp  VSIDS.cpp  VSIDSHeap.cpp  ValueHeuristicsManager.cpp  ValueImpact.cpp  WeightedDegree.cpp  heuristic_factories.cpp
src/cpp/nn/: GNN.cpp  GNNBackbonePredictor.cpp  GNNDispatcher.cpp  GNNEdgePolarityPredictor.cpp  GNNRepair.cpp  GNNValueHeuristic.cpp  GraphBuilder.cpp  heat_map_utils.cpp  tensor_utils.cpp  topology_extractors.cpp
src/cpp/util/: KillHandler.cpp  LexBFS.cpp  Options.cpp  Profiler.cpp  SchedulingProblemHelper.cpp  SubscribableEvent.cpp  ThetaTree.cpp  ThreadPool.cpp  TraceWatcher.cpp  random.cpp  scheduling_helpers.cpp
src/examples/: bibd.cpp  calc_backbone.cpp  checkcl.cpp  clausecheck.cpp  clausecheck_rcpsp.cpp  compute_accuracy.cpp  cpo.cpp  figure2.cpp  figure8.cpp  figure9.cpp  lns_region_to_taillard.cpp  lns_replay.cpp  minimal.cpp  scheduler_oracle.cpp  scheduling_data_generation.cpp  scheduling_datapoint_round_trip_test.cpp  tempo_airbus.cpp  tempo_cumulative.cpp  tempo_fjssp.cpp  tempo_rcpsp.cpp  tempo_sat.cpp  tempo_scheduler.cpp  tempo_team_orienteering.cpp  tempo_tsptw.cpp  testbipartite.cpp  testbounds.cpp  testdgraph.cpp  testgraph.cpp  testjsptight.cpp  testlns.cpp  testnetwork.cpp  testreversible.cpp  testscheduler.cpp  testsearch.cpp  testsolver.cpp  testsparseset.cpp  update_problem_description.cpp  variable_importance.cpp
src/examples/helpers/: VarImportanceRunner.cpp  VarImportanceRunner.hpp  branch_logging.hpp  cli.hpp  git_sha.hpp  scheduling_helpers.cpp  scheduling_helpers.hpp  shell.cpp  shell.hpp
src/examples/torch/: feature_extraction.cpp  graph_equality_check.cpp  lns_gnn.cpp  precedence_prediction.cpp  relaxation_feature_extraction.cpp  scheduler_gnn.cpp  torch_test.cpp
src/header/: BoundSystem.hpp  Clause.hpp  ClauseBase.hpp  Constant.hpp  Constraint.hpp  ConstraintGraph.hpp  ConstraintQueue.hpp  DirectedGraph.hpp  DisjunctiveEdgeFinding.hpp  DisjunctivePrecedence.hpp  DistanceConstraint.hpp  EdgeConstraint.hpp  Explanation.hpp  Failure.hpp  Global.hpp  Heap.hpp  Literal.hpp  Model.hpp  Objective.hpp  Options.hpp  RelaxationPolicy.hpp  Restart.hpp  ReversibleObject.hpp  Scheduler.hpp  Solution.hpp  Solver.hpp  SparseSet.hpp  Task.hpp  TemporalNetwork.hpp  Transitivity.hpp  data_generation.hpp
src/header/constraints/: Cardinality.hpp  Constraint.hpp  CumulativeCheck.hpp  CumulativeEdgeFinding.hpp  CumulativeOverlapFinding.hpp  CumulativePropagatorInterface.hpp  CumulativeTimetabling.hpp  DisjunctiveEdgeFinding.hpp  EdgeConstraint.hpp  FullTransitivity.hpp  Incrementality.hpp  OptionalEdgeConstraint.hpp  PseudoBoolean.hpp  SumConstraint.hpp  Transitivity.hpp
src/header/heuristics/: BaseBooleanHeuristic.hpp  BaseHeuristic.hpp  BaseValueHeuristic.hpp  DRPolicy.hpp  EpsilonGreedyBase.hpp  GNNValueHeuristics.hpp  GapOverActivity.hpp  Greedy.hpp  HeuristicManager.hpp  LRB.hpp  LearningRateHeap.hpp  LiteralPredictor.hpp  PerfectValueOracle.hpp  PrecedencePredictor.hpp  RandomBinaryValue.hpp  RandomValue.hpp  RandomVariableSelection.hpp  RankingHeuristic.hpp  RelaxationInterface.hpp  RelaxationPolicy.hpp  SingleDecentValueHeuristic.hpp  SolutionGuided.hpp  Static.hpp  Tightest.hpp  TightestPrecedencePredictor.hpp  TightestValue.hpp  VSIDS.hpp  VSIDSHeap.hpp  ValueHeuristicConfig.hpp  ValueHeuristicsManager.hpp  ValueImpact.hpp  WeightedCriticalPath.hpp  WeightedDegree.hpp  heuristic_factories.hpp  heuristic_interface.hpp  relaxation_policy_factories.hpp  warmstart.hpp
src/header/nn/: GNN.hpp  GNNBackbonePredictor.hpp  GNNDispatcher.hpp  GNNEdgePolarityPredictor.hpp  GNNPrecedencePredictor.hpp  GNNRelaxationPolicy.hpp  GNNRelaxationPredictor.hpp  GNNRepair.hpp  GNNValueHeuristics.hpp  GraphBuilder.hpp  feature_extractors.hpp  fix_policies.hpp  gnn_relaxation.hpp  heat_map_utils.hpp  (+3 more)
tools/tclap/: Arg.h  ArgException.h  ArgTraits.h  CmdLine.h  CmdLineInterface.h  CmdLineOutput.h  Constraint.h  DocBookOutput.h  HelpVisitor.h  IgnoreRestVisitor.h  MultiArg.h  MultiSwitchArg.h  StdOutput.h  SwitchArg.h  UnlabeledMultiArg.h  UnlabeledValueArg.h  ValueArg.h  ValuesConstraint.h  VersionVisitor.h  Visitor.h
(+60 files in other folders)
