project(Tests)

enable_testing()
find_package(GTest)
if (GTest_FOUND)
    file(GLOB TEST_SOURCES ${CMAKE_SOURCE_DIR}/Tests/util/*.cpp ${CMAKE_SOURCE_DIR}/Tests/*.cpp
            ${CMAKE_SOURCE_DIR}/Tests/heuristics/*.cpp)
    file(GLOB TORCH_TEST_SOURCES ${CMAKE_SOURCE_DIR}/Tests/nn/*.cpp)
    if (${TORCH_ENABLED})
        set(TEST_SOURCES ${TEST_SOURCES} ${TORCH_TEST_SOURCES})
        set(TEST_INCLUDE_DIRS ${TorchScatter_INCLUDE_DIR} ${TorchSparse_INCLUDE_DIR})
    endif ()
    add_executable(${PROJECT_NAME} ${CMAKE_SOURCE_DIR}/Tests/main.cpp ${CMAKE_SOURCE_DIR}/Tests/testing.cpp ${TEST_SOURCES} ${ALL_SOURCES})
    target_include_directories(${PROJECT_NAME} PRIVATE ./ ${GTEST_INCLUDE_DIR} ${CMAKE_SOURCE_DIR} ${TEST_INCLUDE_DIRS})
    target_link_libraries(${PROJECT_NAME} gmock gtest pthread nlohmann_json::nlohmann_json ${TORCH_LIB})
    add_test(NAME ${PROJECT_NAME} COMMAND ${PROJECT_NAME})
else()
    message(WARNING "Failed to locate GTest. You won't be able to run the tests.")
endif()